# CheckInFace

./: README.md
CheckInFace/: .gitignore  README.md  pyproject.toml
CheckInFace/src/app/screens/cadastro/: main.py
CheckInFace/src/app/screens/home/: main.py
CheckInFace/src/app/screens/scanner/: main.py
CheckInFace/src/checkinface/: main.py
CheckInFace/src/classifier/scripts/: image_saver.py  model_loader.py  network_loader.py  train_model.py
CheckInFace/src/service/: conexao.py
CheckInFace/src/service/conexao/: conn.py
CheckInFace/src/util/: base64.py  detect_face.py  detect_face_ssd.py  verify_images.py
