[project]
name = "checkinface"
version = "0.1.0"
description = "An application for attendance control using facial recognition in an automated and efficient way."
authors = [
    {name = "Isaac da Cunha Carvalho",email = "isaacdecarvalho2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "firebase-admin (>=6.8.0,<7.0.0)",
    "pybase64 (>=1.4.1,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "google-cloud-firestore (>=2.20.2,<3.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
]

# Ao criar pacotes colocar aqui
[tool.poetry]
packages = [
  {include = "src", from = "."},
]
include = [
    "checkinface-private_key-adminsdk.json"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Script's para a execução
[tool.poetry.scripts]
start = 'src.app.screens.home.main:main'
test = 'src.service.conexao.conn:getFirestore'
